crates/emela-fmt/tests/snapshots/format__decls.emel_40.snap
---
source: crates/emela-fmt/tests/format.rs
expression: "check(name, &src, 40)"
---
# 崩れた宣言
import Http.Client
import Data.Json.{Json, decode}

## 利用者
pub type User(id: Int, name: String)
  derive Eq, Show # 行末のコメント

enum Shape {
  Circle(radius: Float)
  Rect(Float, Float)
  Empty
}
enum Color { Red, Green, Blue }
error NotFound(id: Int)
const MAX_RETRY: Int = 3 + 1

effect Clock {
  suspend fn sleep(ms: Int) -> ()
  fn now() -> Instant
}
handler FixedClock implements Clock {
  init { FixedClock() }
  suspend fn sleep(ms, resume) {
    resume(())
  }
  fn now() { Instant(0) }
}
layer AppTest {
  FixedClock
  ConsoleLogger
}
trait Show { fn show(self) -> String }
impl Show for User {
  fn show(self) { "User(#{self.name})" }
}

type LongRecord(
  first_field_name: String,
  second_field_name: List[Int],
  third_field_name: Bool,
) derive Eq, Show
enum LongEnum {
  FirstVariantName(Int)
  SecondVariantName(String)
  ThirdVariantName
  FourthVariantName
}

## 整形される fn
@test
fn greet_returns_user() {
  with AppTest {
    user = greet(1)
    assert user.name == "alice"
  }
}
