crates/emela-fmt/tests/snapshots/format__snapshots@comments.emel.snap
---
source: crates/emela-fmt/tests/format.rs
expression: "check(&name, &src, 100)"
input_file: crates/emela-fmt/test_data/comments.emel
---
## ファイルの先頭のドキュメントコメント

# 行だけのコメント
pub fn commented(
  # 最初の引数の前
  a: Int, # a の後ろ
  b: Int,
  # 閉じ括弧の前
) -> Int { # 開き括弧の後ろ
  # 文の前

  x = a + b # 束縛の後ろ

  # 空行の後のコメント
  y = f(
    x, # 引数の後ろ
    # 引数の前
    a,
  )
  z = x # パイプの前
    |> g
    # パイプの間
    |> h
  match y { # 腕の並びの開き
    # 腕の前
    0 -> 1 # 腕の後ろ
    _ -> 2
    # 腕の後ろの行
  }
  if x > 0 {
    1
  } # else の前
  else {
    2
  }
  [
    1, # 要素
    2,
  ]
  # ブロックの最後
}

fn empty_with_comment() {
  # 中身はコメントだけ
}

# ファイルの最後のコメント
